Release version 1.0-1 (xx/xx/xx)
    * updated to MOA Release 2014.11
    * DSC_MOA objects can now be saved using the convenience function saveMOA.

Release version 1.0-0 (12/18/14)
    * interface with stream changed. We use now update.DSC_MOA, etc.

Release version 0.1-1 (6/17/14)
    * applied changes in stream 1.0-2
    * MOA clusterers now report and plot assignment radii. 
    * improved vignette

Initial version 0.1-0 (6/10/14)
    * Moved MOA related code to this package
    * updated to MOA Release 2014.04 