@@ -2,7 +2,6 @@ import(methods)
 import(rJava)
 import(stream)
 
-
 export(
   DSC_DenStream,
   DSC_CluStream,
@@ -10,7 +9,7 @@ export(
 	
   DSD_RandomRBFGeneratorEvents,
   
-  saveMOA
+  saveRDS_MOA
 )
 
 ### S3 Methods
@@ -19,17 +18,8 @@ S3method(print, DSC_MOA)
 S3method(get_copy, DSC_MOA)
 S3method(plot, DSC_MOA)
 S3method(get_assignment, DSC_MOA)
-S3method(microToMacro, DSC_CluStream)
-S3method(microToMacro, DSC_DenStream)
-
-
 
 ### so stream dispatches correcly
 S3method(get_microclusters, DSC_MOA)
 S3method(get_microweights, DSC_MOA)
 S3method(update, DSC_MOA)
-
-S3method(get_macroclusters, DSC_DenStream)
-S3method(get_macroweights, DSC_DenStream)
-S3method(get_macroclusters, DSC_CluStream)
-S3method(get_macroweights, DSC_CluStream)
