@@ -1,6 +1,7 @@
 Release version 1.0-1 (xx/xx/xx)
     * updated to MOA Release 2014.11
-    * DSC_MOA objects can now be saved using the convenience function saveMOA.
+    * DSC_MOA objects can now be saved using the convenience function saveRDS_MOA.
+    * DSC_Clustream and DSC_Denstream use now DSC_TwoStage for reclustering.
 
 Release version 1.0-0 (12/18/14)
     * interface with stream changed. We use now update.DSC_MOA, etc.
